tests/miniJava/neg/004536_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) false return 0 ; } }
